- Fix padding in default skin to avoid title overlapping controls 	- move a (slightly modified) copy of Ben's global.js and ajaxRequest to EN so that it can be shared. 	- and with that, Fishbone skin now uses a bit of Ajax.  For now, it is only the undock window since protorype.js has a bug that blocks onComplete callbacks in IE.  This means the undock will now be useless to IE users.  Firefox uses can now have a compact undock that currently ONLY reloads on a song change. Note: I hope to have this fuly ajax-refreshed in time, and will continue looking for an IE solution.  This checkin is primarily to store the use of prototype 1.4.0 so that I can test with more recent experimental versions.
git-svn-id: file:///home/awy/mirror/slim/trunk/server@6886 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -355,7 +355,7 @@ div#homeMenu {
 .browsedbListItem {
 	position: relative;
 	padding: 6px;
-	padding-right: 65px;
+	padding-right: 80px;
 }
 
 #currentListItem {
